<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrentEventActivity"
    tools:visibility="visible">

    <TextView
        android:id="@+id/TextViewEventN"
        android:layout_width="269dp"
        android:layout_height="74dp"
        android:text="@string/eventN"
        android:textColor="@color/gray"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051"
        tools:visibility="visible" />

    <Button
        android:id="@+id/buttonAddTicket"
        android:layout_width="206dp"
        android:layout_height="61dp"
        android:onClick="onClickCreate"
        android:text="@string/add_ticket"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/buttonScanner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextViewEventN"
        tools:visibility="visible" />

    <Button
        android:id="@+id/buttonScanner"
        android:layout_width="217dp"
        android:layout_height="63dp"
        android:onClick="onClickScan"
        android:text="@string/scan"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextViewEventN"
        app:layout_constraintVertical_bias="0.208"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>