<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateTicketActivity">

    <Button
        android:id="@+id/buttonGenerateQR"
        android:layout_width="245dp"
        android:layout_height="54dp"
        android:onClick="onClickCreateTicket"
        android:text="@string/generate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextHumanName"
        app:layout_constraintVertical_bias="0.218" />

    <EditText
        android:id="@+id/editTextTextHumanName"
        android:layout_width="244dp"
        android:layout_height="62dp"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewQR"
        app:layout_constraintVertical_bias="0.492" />

    <ImageView
        android:id="@+id/imageViewQR"
        android:layout_width="243dp"
        android:layout_height="239dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.206"
        app:srcCompat="@android:drawable/list_selector_background" />

    <Button
        android:id="@+id/button_saver"
        android:layout_width="242dp"
        android:layout_height="54dp"
        android:onClick="onClickSave"
        android:text="@string/save"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextHumanName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewQR"
        app:layout_constraintVertical_bias="0.631" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="357dp"
        android:layout_height="49dp"
        android:textColor="@color/gray"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_saver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewQR" />
</androidx.constraintlayout.widget.ConstraintLayout>